--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 		<img id="4" src="images\photo-1428999418909-363f8e091c50.jpg">
 
 	</div>
-
-	<button id="prev">Previous</button>
-	<button id="next">Next</button>
+	<p>Slider by Nathan Handley (under construction)</p>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script src="slide.js"></script>
