--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head><link rel="stylesheet" href="style.css"></head>
 <body>
 
+	<div id="nav">
+
+		<div id="logos" >
+
+			<a id='git'href="https://github.com/NHandley/odin-project-Slider.git" target="_blank"> <img src="images\GitHub-Mark-64px.png"/>
+			</a></br>
+			<a id='twitter' href="https://twitter.com/mahonii89" target="_blank"> <img src="images\TwitterLogo.png"/>
+			</a>
+
+		</div>
+
+	</div>
+
 	<div class="slider">
 
 		<img id="1" src="images\photo-1441716844725-09cedc13a4e7.jpg">
