--- a/index.html
+++ b/index.html
@@ -3,33 +3,18 @@
 <head><link rel="stylesheet" href="style.css"></head>
 <body>
 
-	<div class="nav">
+		<ul class="slider">
 
-		<div id="logos" >
+			<li> <img src="images\photo-1441716844725-09cedc13a4e7.jpg"> </li>
+			<li> <img src="images\photo-1441260038675-7329ab4cc264.jpg"> </li>
+			<li> <img src="images\photo-1436377734980-0ee004df570b.jpg"> </li>
+			<li> <img src="images\photo-1428999418909-363f8e091c50.jpg"> </li>
 
-			<a id='git'href="https://github.com/NHandley/odin-project-Slider.git" target="_blank"> <img src="images\GitHub-Mark-64px.png"/>
-			</a>
-			<a id='twitter' href="https://twitter.com/mahonii89" target="_blank"> <img src="images\TwitterLogo.png"/>
-			</a>
+		</ul>
 
-		</div>
-
-	</div>
-
-	<div class="container">
-
-		<div class="slider">
-
-			<img id="1" src="images\photo-1441716844725-09cedc13a4e7.jpg">
-			<img id="2" src="images\photo-1441260038675-7329ab4cc264.jpg">
-			<img id="3" src="images\photo-1436377734980-0ee004df570b.jpg">
-			<img id="4" src="images\photo-1428999418909-363f8e091c50.jpg">
-
-		</div>
+		<button>Next</button>
 
 	<p>Slider by Nathan Handley (under construction)</p>
-
-	</div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
