--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 		<ul class="slider">
 
-			<li> <img src="images\photo-1441716844725-09cedc13a4e7.jpg"> </li>
-			<li> <img src="images\photo-1441260038675-7329ab4cc264.jpg"> </li>
-			<li> <img src="images\photo-1436377734980-0ee004df570b.jpg"> </li>
-			<li> <img src="images\photo-1428999418909-363f8e091c50.jpg"> </li>
+			<li> <img src="images\blue-tit-915445_1280.jpg"> </li>
+			<li> <img src="images\lime-907124_1280.jpg"> </li>
+			<li> <img src="images\macaroon-886565_1280.jpg"> </li>
+			<li> <img src="images\night-911712_1280.jpg"> </li>
 
 		</ul>
 
