--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 		<ul class="slider">
 
-			<li> <img src="images\blue-tit-915445_1280.jpg"> </li>
-			<li> <img src="images\lime-907124_1280.jpg"> </li>
-			<li> <img src="images\macaroon-886565_1280.jpg"> </li>
-			<li> <img src="images\night-911712_1280.jpg"> </li>
+			<li id ="slide0"> <img src="images\blue-tit-915445_1280.jpg"> </li>
+			<li id ="slide1"> <img src="images\lime-907124_1280.jpg"> </li>
+			<li id ="slide2"> <img src="images\macaroon-886565_1280.jpg"> </li>
+			<li id ="slide3"> <img src="images\night-911712_1280.jpg"> </li>
 
 		</ul>
 
