--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 		<ul class="slider">
 
-			<li id ="slide-0"> <img src="images\blue-tit-915445_1280.jpg"> </li>
-			<li id ="slide-1"> <img src="images\lime-907124_1280.jpg"> </li>
-			<li id ="slide-2"> <img src="images\macaroon-886565_1280.jpg"> </li>
-			<li id ="slide-3"> <img src="images\night-911712_1280.jpg"> </li>
+			<img src="images\blue-tit-915445_1280.jpg" id="slide1"/>
+			<img src="images\lime-907124_1280.jpg"  id="slide2"/> 
+			<img src="images\macaroon-886565_1280.jpg" id="slide3"/>
+			<img src="images\night-911712_1280.jpg" id="slide4"/>
 
 		</ul>
 
