--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head><link rel="stylesheet" href="style.css"></head>
 <body>
 
-		<ul class="slider">
+		<div class="slider">
 
 			<img src="images\blue-tit-915445_1280.jpg" id="slide1"/>
 			<img src="images\lime-907124_1280.jpg"  id="slide2"/> 
 			<img src="images\macaroon-886565_1280.jpg" id="slide3"/>
 			<img src="images\night-911712_1280.jpg" id="slide4"/>
 
-		</ul>
+		</div>
 
 		<button>Next</button>
 
