--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE HTML>
 <html>
-	<head><link rel="stylesheet" href="style.css"></head>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+	</head>
+
 <body>
 
 		<div class="slider">
