--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
 		</div>
 
-		<button>Next</button>
+		<div class="rightBtn">
+			<button id="next">Next</button>
+		</div>
+
+		<div class="leftBtn">
+			<button id="prev">Prev</button>
+		</div>
 
 	<p>Slider by Nathan Handley (under construction)</p>
 	
